# aide-memoire

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
aide_memoire/: __init__.py  __main__.py  cli.py  compiler.py  config.py  intel.py  models.py  processor.py  verifier.py
aide_memoire/extractors/: __init__.py  base.py  docx_extractor.py  pdf_extractor.py  pptx_extractor.py  text_extractor.py
aide_memoire/latex/: __init__.py  generator.py  renderer.py
aide_memoire/latex/templates/: letter_3col.tex.j2  letter_4col.tex.j2  notecard.tex.j2
