[project]
name = "aide-memoire"
version = "0.1.0"
description = "Generate high-quality, dense exam reference cards from course materials using LaTeX"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.80",
    "python-pptx>=1.0",
    "PyMuPDF>=1.25",
    "python-docx>=1.0",
    "Jinja2>=3.1",
    "click>=8.0",
    "rich>=14.0",
    "Pillow>=12.0",
]

[project.scripts]
aide-memoire = "aide_memoire.cli:cli"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"
