[project]
name = "aide-memoire"
version = "0.1.0"
description = "Generate high-quality, dense exam reference cards from course materials using LaTeX"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{name = "Camden Balberg"}]
keywords = ["cheat-sheet", "exam", "latex", "pdf", "ai", "claude", "study", "reference-card"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
dependencies = [
    "anthropic>=0.80",
    "python-pptx>=1.0",
    "PyMuPDF>=1.25",
    "python-docx>=1.0",
    "Jinja2>=3.1",
    "click>=8.0",
    "rich>=14.0",
    "Pillow>=12.0",
]

[project.urls]
Homepage = "https://github.com/camdenbalberg/aide-memoire"
Repository = "https://github.com/camdenbalberg/aide-memoire"
Issues = "https://github.com/camdenbalberg/aide-memoire/issues"

[project.scripts]
aide-memoire = "aide_memoire.cli:cli"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
